feat: removed ui and customized authentication
