# src/backend/open-api/go/model_closed_state_options.go
@@ -1,0 +1,34 @@
+/*
+ * Swagger - OpenAPI 3.0
+ *
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * API version: 1.0.0
+ * Contact: nikita@ttnr.me
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package openapi
+
+type ClosedStateOptions struct {
+	State string `json:"state"`
+}
+
+// AssertClosedStateOptionsRequired checks if the required fields are not zero-ed
+func AssertClosedStateOptionsRequired(obj ClosedStateOptions) error {
+	elements := map[string]interface{}{
+		"state": obj.State,
+	}
+	for name, el := range elements {
+		if isZero := IsZeroValue(el); isZero {
+			return &RequiredError{Field: name}
+		}
+	}
+
+	return nil
+}
+
+// AssertClosedStateOptionsConstraints checks if the values respects the defined constraints
+func AssertClosedStateOptionsConstraints(obj ClosedStateOptions) error {
+	return nil
+}
