# src/backend/open-api/go/model_device_change_options.go
@@ -1,0 +1,35 @@
+/*
+ * Swagger - OpenAPI 3.0
+ *
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * API version: 1.0.0
+ * Contact: nikita@ttnr.me
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package openapi
+
+type DeviceChangeOptions struct {
+	Name string `json:"name,omitempty"`
+
+	Wifi DeviceChangeOptionsWifi `json:"wifi,omitempty"`
+
+	Kafka DeviceChangeOptionsKafka `json:"kafka,omitempty"`
+}
+
+// AssertDeviceChangeOptionsRequired checks if the required fields are not zero-ed
+func AssertDeviceChangeOptionsRequired(obj DeviceChangeOptions) error {
+	if err := AssertDeviceChangeOptionsWifiRequired(obj.Wifi); err != nil {
+		return err
+	}
+	if err := AssertDeviceChangeOptionsKafkaRequired(obj.Kafka); err != nil {
+		return err
+	}
+	return nil
+}
+
+// AssertDeviceChangeOptionsConstraints checks if the values respects the defined constraints
+func AssertDeviceChangeOptionsConstraints(obj DeviceChangeOptions) error {
+	return nil
+}
