# src/backend/open-api/go/model_device_change_options_wifi.go
@@ -1,0 +1,27 @@
+/*
+ * Swagger - OpenAPI 3.0
+ *
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * API version: 1.0.0
+ * Contact: nikita@ttnr.me
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package openapi
+
+type DeviceChangeOptionsWifi struct {
+	Ssid string `json:"ssid,omitempty"`
+
+	Password string `json:"password,omitempty"`
+}
+
+// AssertDeviceChangeOptionsWifiRequired checks if the required fields are not zero-ed
+func AssertDeviceChangeOptionsWifiRequired(obj DeviceChangeOptionsWifi) error {
+	return nil
+}
+
+// AssertDeviceChangeOptionsWifiConstraints checks if the values respects the defined constraints
+func AssertDeviceChangeOptionsWifiConstraints(obj DeviceChangeOptionsWifi) error {
+	return nil
+}
