# src/backend/open-api/go/model_device_change_state.go
@@ -1,0 +1,42 @@
+/*
+ * Swagger - OpenAPI 3.0
+ *
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * API version: 1.0.0
+ * Contact: nikita@ttnr.me
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package openapi
+
+type DeviceChangeState struct {
+	State string `json:"state"`
+
+	// Emit open event
+	EmitOpenEvent bool `json:"emitOpenEvent"`
+
+	// Emit packtrap event
+	EmitPacktrapEvent bool `json:"emitPacktrapEvent"`
+}
+
+// AssertDeviceChangeStateRequired checks if the required fields are not zero-ed
+func AssertDeviceChangeStateRequired(obj DeviceChangeState) error {
+	elements := map[string]interface{}{
+		"state":             obj.State,
+		"emitOpenEvent":     obj.EmitOpenEvent,
+		"emitPacktrapEvent": obj.EmitPacktrapEvent,
+	}
+	for name, el := range elements {
+		if isZero := IsZeroValue(el); isZero {
+			return &RequiredError{Field: name}
+		}
+	}
+
+	return nil
+}
+
+// AssertDeviceChangeStateConstraints checks if the values respects the defined constraints
+func AssertDeviceChangeStateConstraints(obj DeviceChangeState) error {
+	return nil
+}
