# src/backend/open-api/go/model_device_login.go
@@ -1,0 +1,34 @@
+/*
+ * Swagger - OpenAPI 3.0
+ *
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * API version: 1.0.0
+ * Contact: nikita@ttnr.me
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package openapi
+
+type DeviceLogin struct {
+	Token string `json:"token"`
+}
+
+// AssertDeviceLoginRequired checks if the required fields are not zero-ed
+func AssertDeviceLoginRequired(obj DeviceLogin) error {
+	elements := map[string]interface{}{
+		"token": obj.Token,
+	}
+	for name, el := range elements {
+		if isZero := IsZeroValue(el); isZero {
+			return &RequiredError{Field: name}
+		}
+	}
+
+	return nil
+}
+
+// AssertDeviceLoginConstraints checks if the values respects the defined constraints
+func AssertDeviceLoginConstraints(obj DeviceLogin) error {
+	return nil
+}
