# src/backend/open-api/go/model_open_state_options.go
@@ -1,0 +1,38 @@
+/*
+ * Swagger - OpenAPI 3.0
+ *
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * API version: 1.0.0
+ * Contact: nikita@ttnr.me
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package openapi
+
+type OpenStateOptions struct {
+	State string `json:"state"`
+
+	// Emit open event
+	EmitOpenEvent bool `json:"emitOpenEvent"`
+}
+
+// AssertOpenStateOptionsRequired checks if the required fields are not zero-ed
+func AssertOpenStateOptionsRequired(obj OpenStateOptions) error {
+	elements := map[string]interface{}{
+		"state":         obj.State,
+		"emitOpenEvent": obj.EmitOpenEvent,
+	}
+	for name, el := range elements {
+		if isZero := IsZeroValue(el); isZero {
+			return &RequiredError{Field: name}
+		}
+	}
+
+	return nil
+}
+
+// AssertOpenStateOptionsConstraints checks if the values respects the defined constraints
+func AssertOpenStateOptionsConstraints(obj OpenStateOptions) error {
+	return nil
+}
