# src/backend/open-api/go/model_packtrap_state_options.go
@@ -1,0 +1,38 @@
+/*
+ * Swagger - OpenAPI 3.0
+ *
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * API version: 1.0.0
+ * Contact: nikita@ttnr.me
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package openapi
+
+type PacktrapStateOptions struct {
+	State string `json:"state"`
+
+	// Emit packtrap event
+	EmitPacktrapEvent bool `json:"emitPacktrapEvent"`
+}
+
+// AssertPacktrapStateOptionsRequired checks if the required fields are not zero-ed
+func AssertPacktrapStateOptionsRequired(obj PacktrapStateOptions) error {
+	elements := map[string]interface{}{
+		"state":             obj.State,
+		"emitPacktrapEvent": obj.EmitPacktrapEvent,
+	}
+	for name, el := range elements {
+		if isZero := IsZeroValue(el); isZero {
+			return &RequiredError{Field: name}
+		}
+	}
+
+	return nil
+}
+
+// AssertPacktrapStateOptionsConstraints checks if the values respects the defined constraints
+func AssertPacktrapStateOptionsConstraints(obj PacktrapStateOptions) error {
+	return nil
+}
